--- a/math_companion/prelim.tex
+++ b/math_companion/prelim.tex
@@ -92,13 +92,13 @@ For UDR :
 \subsubsection{DEEP-ALI errors}\label{sec:fri-deep-ali}
 \begin{verbatim}circuit.py/get_DEEP_ALI_errors()\end{verbatim}
 
-For parameters:
+The DEEP-ALI soundness error (with exception of the list size) and notation are taken from \cite[Section 5.2]{habock2022summary}:
 \begin{itemize}
-    \item Number of columns: $C=$ \verb|num_columns|
-    \item AIR degree: $d =$ \verb|AIR_max_degree|
-    \item Trace increase constant [Hab22, Remark7]: $m_c$ \verb|max_combo|
-    \item Trace length: $N$
-    \item List size: $\ell$ as in \cref{sec:fri_list_sizes}
+    \item Number of AIR constraints~\cite[p.15]{habock2022summary}: $C=$ \verb|num_columns|
+    \item Overall AIR degree: $d =$ \verb|AIR_max_degree|
+    \item Trace increase constant \cite[Remark 7]{habock2022summary}: $m_c$ \verb|max_combo| (set to 2 in ~\cite{habock2022summary} )
+    \item Trace length: $N$ (denoted by $|H|$ in ~\cite{habock2022summary})
+    \item List size: $\ell$ as in \cref{sec:fri_list_sizes}, replaces the $L^{+}$ in ~\cite{habock2022summary}
 \end{itemize}
 
 The DEEP-ALI soundness error is computed as follows:
